--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Destinos</title>
     <link rel="stylesheet" href="css/destinos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/css/owl.theme.default.min.css">
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="padding-bottom: 5rem;">
         <div class="container-fluid">
             <a class="navbar-brand nav-color" href="#">IYAI</a>
@@ -29,7 +28,6 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">Link</a>
                     </li>
-
                   </ul>
             </div>
         </div>
@@ -68,7 +66,7 @@
                     <div class="card__background" style="background-image: url(https://images.myguide-cdn.com/md/common/large/5cae6c9b69805-521805.jpg)"></div>
                     <div class="card__content">
                         <p class="card__category">O'Higgins</p>
-                        <h3 class="card__heading">Pichilemu</h3>
+                        <h3 class="card__heading">Playa Pichilemu</h3>
                     </div>
                 </a>
             </div>
@@ -86,34 +84,9 @@
     </section>
         
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/owl.carousel.min.js"></script>
-        <script>
-            $(document).ready(function(){
-                $('.owl-carousel').owlCarousel({
-                    items: 3,
-                    loop: true,
-                    margin: 10,
-                    dots:true,
-                    nav:true,
-                autoplay: true,
-                navigation:true,
-                autoplayTimeout: 3000,
-                responsive: {
-                    0: {
-                        items: 1
-                    },
-                    600: {
-                        items: 3
-                    },
-                    1000: {
-                        items: 4
-                    }
-                }
-            });
-        });
-    </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        <script src="/js/owl.carousel.min.js"></script>
+        <script src="/js/playas.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 
 
